crates/specforge-cli/tests/snapshots/tests__parity__migrate__cli.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: cli_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "spec/old.spec": "// specforge-format: 1.0\nbehavior old_one \"Old\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "spec/old.spec.bak": "// specforge-format: 0.1\nbehavior old_one \"Old\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n"
  },
  "ok": true,
  "payload": {
    "backups": [
      {
        "backup_path": "[ROOT]/spec/old.spec.bak",
        "original_path": "[ROOT]/spec/old.spec"
      }
    ],
    "diffs": [
      {
        "after_hash": "[SHA256]",
        "before_hash": "[SHA256]",
        "file_path": "[ROOT]/spec/old.spec",
        "unified_text": "--- a/spec/old.spec\n+++ b/spec/old.spec\n@@ -1,4 +1,4 @@\n-// specforge-format: 0.1\n+// specforge-format: 1.0\n behavior old_one \"Old\" {\n   category \"core\"\n   contract \"The system MUST work\"\n"
      }
    ],
    "failed_count": 0,
    "files_written": [
      "spec/old.spec",
      "spec/old.spec.bak"
    ],
    "migrated_count": 1,
    "results": [
      {
        "file_path": "[ROOT]/spec/main.spec",
        "from_version": {
          "major": 1,
          "minor": 0
        },
        "status": "skipped",
        "to_version": {
          "major": 1,
          "minor": 0
        }
      },
      {
        "file_path": "[ROOT]/spec/old.spec",
        "from_version": {
          "major": 0,
          "minor": 1
        },
        "status": "migrated",
        "to_version": {
          "major": 1,
          "minor": 0
        }
      }
    ],
    "skipped_count": 1,
    "target_version": {
      "major": 1,
      "minor": 0
    }
  }
}
